--- a/Etapa2/Frontend/templates/analytics-training.html
+++ b/Etapa2/Frontend/templates/analytics-training.html
@@ -31,8 +31,6 @@
             <input class="form-control" type="file" id="training-file" name="training-file" accept=".csv, .xlsx, .xls, .json">
         </div>
 
-
-
         <button type="submit" class="btn btn-primary">Subir Archivo</button>
     </form>
 
@@ -66,6 +64,9 @@
         </table>
     </div>
     {% endif %}
+
+    <!-- Botón para regresar a la página de Análisis de Opiniones -->
+    <a href="/analytics" class="btn btn-secondary mt-4">Regresar al Analizador</a>
 
     <!-- Script para hacer fade in del mensaje -->
     <script>
