--- a/Etapa2/Frontend/templates/layout.html
+++ b/Etapa2/Frontend/templates/layout.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Favicon -->
-    <link rel="icon" href="{{ url_for('static', filename='resources/icon.ico') }}" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='resources/icon.ico') }}" type="image/icon">
 
     <style>
         html, body {
@@ -64,7 +64,7 @@
     <!-- Pie de página -->
     <footer class="bg-light text-center text-lg-start">
         <div class="text-center p-3">
-            © 2024 ODS Insight | Powered by LoganTaurus, <prgrammer-name - 1>, <prgrammer-name - 2>
+            © 2024 ODS Insight | Powered by LoganTaurus, Arkhángelos, clubPenguinHacker
         </div>
     </footer>
 
